<resources>
    <string name="app_name">AlatracaNikoleExam1</string>
    <string name="button">Back</string>
    <string name="buttons">Next</string>
    <string name="text1">Classic</string>
    <string name="text2">Petite Sheffield</string>
    <string name="text3">The Classic Petite with an eggshell white dial and a classic black Sheffield leather strap dresses you up for any occasion. A true design icon.</string>
</resources>