<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9C5CA"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="back" />

    <Button
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="next" />

    <ImageView
        android:id="@+id/pic"
        style="@style/pic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="51dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/text3"
        app:layout_constraintEnd_toStartOf="@+id/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/watch"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text1"
        style="@style/text1"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/text1"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:fontFamily="@font/amiko_semibold"
        app:layout_constraintBottom_toTopOf="@+id/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pic"
        tools:ignore="MissingConstraints"
        tools:text="Classic" />

    <TextView
        android:id="@+id/text2"
        style="@style/text2"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="109dp"
        android:text="@string/text2"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:fontFamily="@font/amiko_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Petite Sheffield" />

    <TextView
        android:id="@+id/text3"
        style="@style/text3"
        android:layout_width="0dp"
        android:layout_height="109dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="182dp"
        android:text="@string/text3"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text1"
        tools:text="The Classic Petite with an eggshell white dial and a classic black Sheffield leather strap dresses you up for any occasion. A true design icon.  " />

</android.support.constraint.ConstraintLayout>